added user roles and kind of admin panel
